--- a/example/identity/package.json
+++ b/example/identity/package.json
@@ -2,6 +2,7 @@
   "name": "falu-identity-react-native-example",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "android": "react-native run-android log-android",
     "ios": "react-native run-ios",
@@ -10,10 +11,13 @@
     "build:ios": "cd ios && xcodebuild -workspace FaluIdentityReactNativeExample.xcworkspace -scheme FaluIdentityReactNativeExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
   },
   "dependencies": {
+    "@react-native/gradle-plugin": "0.75.0-main",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "jsc-android": "^250231.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1"
   },
@@ -21,6 +25,8 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli-platform-android": "^13.6.4",
+    "@react-native-community/cli-platform-ios": "^13.6.4",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
