--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
+  "private": true,
+  "type": "module",
   "files": [
     "src",
     "lib",
@@ -27,6 +29,7 @@
     "!**/.*"
   ],
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "example": "yarn workspace falu-identity-react-native-example",
     "test": "jest",
     "typecheck": "tsc --noEmit",
@@ -53,6 +56,10 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/eslint-config": "^0.73.1",
     "@release-it/conventional-changelog": "^5.0.0",
+    "@react-native-community/cli-platform-android": "^13.6.4",
+    "@react-native-community/cli-platform-ios": "^13.6.4",
+    "@rnx-kit/metro-config": "^1.3.15",
+    "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
     "commitlint": "^17.0.2",
@@ -76,10 +83,7 @@
     "react": "*",
     "react-native": "*"
   },
-  "workspaces": [
-    "example"
-  ],
-  "packageManager": "yarn@3.6.1",
+  "packageManager": "pnpm@8.9.0",
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
