Use pnpm and restructure mono repo

--- a/example/identity/app.json
+++ b/example/identity/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "FaluIdentityReactNativeExample",
-  "displayName": "FaluIdentityReactNativeExample"
+  "name": "identity",
+  "displayName": "identity"
 }
