--- a/example/identity/package.json
+++ b/example/identity/package.json
@@ -9,10 +9,9 @@
     "build:ios": "cd ios && xcodebuild -workspace FaluIdentityReactNativeExample.xcworkspace -scheme FaluIdentityReactNativeExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
   },
   "dependencies": {
+    "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1"
   },
@@ -20,18 +19,22 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/runtime": "^7.24.4",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@falu/react-native-identity": "workspace:*",
     "@react-native-community/cli-platform-android": "^13.6.4",
     "@react-native-community/cli-platform-ios": "^13.6.4",
-    "@react-native/gradle-plugin": "0.75.0-main",
-    "@react-native/eslint-config": "^0.72.2",
-    "@rnx-kit/metro-config": "^1.3.15",
-    "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.75.0-main",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/gradle-plugin": "0.75.0-main",
     "@react-native/metro-config": "0.75.0-main",
     "@react-native/typescript-config": "0.75.0-main",
+    "@rnx-kit/metro-config": "^1.3.15",
+    "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
     "babel-plugin-module-resolver": "^5.0.0",
-    "metro-react-native-babel-preset": "0.76.5"
+    "metro-react-native-babel-preset": "0.76.5",
+    "react-native-monorepo-tools": "1.2.1",
+    "react": "18.2.0",
+    "react-native": "0.73.6"
   },
   "engines": {
     "node": ">=18"
