--- a/examples/identity/android/settings.gradle
+++ b/examples/identity/android/settings.gradle
@@ -4,4 +4,4 @@ include ':app'
 includeBuild('../../../node_modules/@react-native/gradle-plugin')
 
 include ':faluidentityreactnative'
-project(':faluidentityreactnative').projectDir = new File(rootProject.projectDir, '../../../apps/android')
+project(':faluidentityreactnative').projectDir = new File(rootProject.projectDir, '../../../frameworks/android')
