--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "format": "prettier --write \"**/*.{js,cjs,mjs,jsx,ts,cts,mts,tsx,css,json,yaml,yml}\"",
     "format:check": "prettier --check \"**/*.{js,cjs,mjs,jsx,ts,cts,mts,tsx,css,json,yaml,yml}\"",
     "changeset": "changeset",
+
     "packages:version": "changeset version",
     "packages:publish": "changeset publish",
+
+    "identity:prepare": "pnpm --filter=@falu/react-native-identity prepare",
+
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
