--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,14 +21,8 @@ jobs:
       with:
         version: 8
 
-    - name: ⎔ Setup node
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18
-        cache: "pnpm"
-
-    - name: 📥 Download deps
-      run: pnpm install
+    - name: Setup
+      uses: ./.github/actions/setup
 
     - name: 🔬 Lint
       run: pnpm lint
@@ -41,19 +35,8 @@ jobs:
     - name: ⬇️ Checkout repo
       uses: actions/checkout@v4
 
-    - name: ⎔ Set up pnpm
-      uses: pnpm/action-setup@v3
-      with:
-        version: 8
-
-    - name: ⎔ Setup node
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18
-        cache: "pnpm"
-
-    - name: 📥 Download deps
-      run: pnpm install
+    - name: Setup
+      uses: ./.github/actions/setup
 
     - name: 💅 Prettier check
       run: pnpm format:check
