--- a/.github/actions/android/action.yml
+++ b/.github/actions/android/action.yml
@@ -21,6 +21,7 @@ runs:
           ${{ runner.os }}-gradle-
 
     - name: Build example for Android
+      shell: bash
       env:
         JAVA_OPTS: "-XX:MaxHeapSize=6g"
       run: |
