--- a/.github/actions/android/action.yml
+++ b/.github/actions/android/action.yml
@@ -25,4 +25,4 @@ runs:
       env:
         JAVA_OPTS: "-XX:MaxHeapSize=6g"
       run: |
-        pnpm run cd examples/identity && pnpm build:android
+        cd examples/identity && pnpm build:android
