--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,60 @@
 version: 2
-
 updates:
-  - package-ecosystem: 'npm' # See documentation for possible values
-    directory: '/' # Location of package manifests
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
-      interval: 'weekly'
-      time: '02:00'
-    open-pull-requests-limit: 10
-
-  - package-ecosystem: 'github-actions' # See documentation for possible values
-    directory: '/' # Location of package manifests
+      interval: "weekly"
+      time: "02:00"
+    groups:
+      eslint:
+        patterns:
+          - "@typescript-eslint/eslint-plugin"
+          - "@typescript-eslint/parser"
+          - "eslint-plugin-import"
+          - "eslint-plugin-jsx-a11y"
+      prettier:
+        patterns:
+          - "eslint-config-prettier"
+          - "prettier*"
+      react:
+        patterns:
+          - "@types/react"
+          - "react"
+          - "eslint-plugin-react"
+          - "eslint-plugin-react-hooks"
+      react-native:
+        patterns: ["react-native*"]
+      turbo:
+        patterns:
+          - "eslint-config-turbo"
+          - "turbo"
+      vitest:
+        patterns:
+          - 'eslint-plugin-vitest'
+          - 'vitest'
+    reviewers:
+      - mburumaxwell
+      - sethonyango
+  - package-ecosystem: "github-actions"
+    directory: /
     schedule:
-      interval: 'weekly'
-      time: '02:00'
+      interval: "weekly"
+      time: "02:00"
+    reviewers:
+      - mburumaxwell
+      - sethonyango
+  - package-ecosystem: "gradle"
+    directory: "/"
+    schedule:
+      interval: "weekly"
     open-pull-requests-limit: 10
+    reviewers:
+      - sethonyango
+    groups:
+      androidx:
+        patterns:
+          - "androidx.*"
+      google:
+        patterns:
+          - "com.google.android.gms:*"
+          - "com.google.android.play:*"
