--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -18,3 +18,7 @@ runs:
     - name: 📥 Download deps
       shell: bash
       run: pnpm install
+
+    - name: Generate changeset
+      shell: bash
+      run: pnpm changeset
