--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "identity:prepare": "pnpm --filter=@falu/react-native-identity prepare",
 
     "build": "turbo run build",
-    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint": "turbo run lint",
     "test": "turbo run test",
     "clean": "turbo run clean && rimraf .turbo"
   },
@@ -44,24 +44,5 @@
   },
   "resolutions": {
     "@types/react": "^18.2.44"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@react-native",
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "quoteProps": "consistent",
-          "singleQuote": true,
-          "tabWidth": 2,
-          "trailingComma": "es5",
-          "useTabs": false
-        }
-      ]
-    }
   }
 }
