--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "example": "yarn workspace falu-identity-react-native-example",
-    "test": "jest",
+    "test": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "rimraf android/build example/android/build example/android/app/build example/ios/build lib",
@@ -38,13 +38,11 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/eslint-config": "^0.74.80",
     "@release-it/conventional-changelog": "^8.0.1",
-    "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
     "commitlint": "^19.2.2",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^17.2.0",
     "typescript": "^5.2.2"
@@ -54,13 +52,6 @@
     "react-native": "*"
   },
   "packageManager": "pnpm@8.9.0",
-  "jest": {
-    "preset": "react-native",
-    "modulePathIgnorePatterns": [
-      "<rootDir>/example/node_modules",
-      "<rootDir>/lib/"
-    ]
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
