--- a/examples/identity/package.json
+++ b/examples/identity/package.json
@@ -1,6 +1,7 @@
 {
   "name": "falu-identity-react-native-example",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "android": "react-native run-android log-android",
     "ios": "react-native run-ios",
