--- a/examples/identity/package.json
+++ b/examples/identity/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "falu-identity-react-native-example",
-  "version": "0.0.1",
+  "name": "falu-react-native-identity-example",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android log-android",
@@ -9,7 +9,7 @@
     "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
     "build:ios": "cd ios && xcodebuild -workspace FaluIdentityReactNativeExample.xcworkspace -scheme FaluIdentityReactNativeExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "clean": "rimraf .turbo"
+    "clean": "rimraf .turbo android/build android/app/build ios/build"
   },
   "dependencies": {
     "@react-navigation/elements": "^1.3.30",
@@ -25,9 +25,7 @@
     "@falu/react-native-identity": "workspace:*",
     "@react-native-community/cli-platform-android": "^13.6.4",
     "@react-native-community/cli-platform-ios": "^13.6.5",
-    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.75.0-main",
-    "@react-native/eslint-config": "^0.74.80",
     "@react-native/gradle-plugin": "0.75.0-main",
     "@react-native/metro-config": "0.75.0-main",
     "@react-native/typescript-config": "0.75.0-main",
