--- a/package.json
+++ b/package.json
@@ -21,21 +21,16 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.27.1",
-    "@testing-library/react": "14.2.2",
-    "@typescript-eslint/eslint-plugin": "7.7.0",
-    "@typescript-eslint/parser": "7.7.0",
+    "@react-native-community/eslint-config": "3.2.0",
+    "@react-native/eslint-config": "0.74.80",
     "@vitejs/plugin-react": "4.2.1",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "8.51.0",
     "eslint-config-turbo": "1.13.2",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vitest": "0.4.1",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
+    "react-native-builder-bob": "0.20.0",
     "rimraf": "5.0.5",
     "turbo": "1.13.2",
     "typescript": "5.4.4",
@@ -44,5 +39,6 @@
   },
   "resolutions": {
     "@types/react": "^18.2.44"
-  }
+  },
+  "packageManager": "pnpm@8.9.0"
 }
