--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@falu/react-native-identity",
-  "version": "0.1.0",
-  "description": "Falu's react native SDK for identity",
+  "version": "0.0.1",
+  "description": "Falu react native SDK for identity",
   "author": "Falu <support@falu.io> (https://falu.io/)",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -13,66 +13,33 @@
     "lib"
   ],
   "scripts": {
-    "example": "yarn workspace falu-identity-react-native-example",
-    "test": "vitest",
+    "example": "yarn workspace falu-react-native-identity-example",
+    "prepare": "bob build",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "clean": "rimraf .turbo lib android/build example/android/build example/android/app/build example/ios/build",
-    "prepare": "bob build",
-    "release": "release-it"
+    "test": "vitest",
+    "clean": "rimraf .turbo lib ../../frameworks/android/build ../../examples/android/build ../../examples/android/app/build ../../examples/ios/build"
   },
   "keywords": [
     "react-native",
     "ios",
     "android"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/faluapp/falu-identity-react-native.git"
+  "repository": "https://github.com/faluapp/falu-react-native",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/faluapp/falu-react-native/issues"
   },
+  "homepage": "https://github.com/faluapp/falu-react-native/blob/main/packages/identity/README.md",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.2.2",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@react-native/eslint-config": "^0.74.80",
-    "@release-it/conventional-changelog": "^8.0.1",
-    "@types/react": "^18.2.44",
-    "commitlint": "^19.2.2",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "react-native-builder-bob": "^0.20.0",
-    "release-it": "^17.2.0",
-    "typescript": "^5.2.2"
+    "@types/react": "^18.2.44"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
-  },
-  "packageManager": "pnpm@8.9.0",
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore: release ${version}",
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": true
-    },
-    "github": {
-      "release": true
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular"
-      }
-    }
   },
   "react-native-builder-bob": {
     "source": "src",
