--- a/examples/identity/package.json
+++ b/examples/identity/package.json
@@ -12,24 +12,24 @@
     "clean": "rimraf .turbo android/build android/app/build ios/build"
   },
   "dependencies": {
-    "@react-navigation/elements": "^1.3.30",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1"
+    "@react-navigation/elements": "1.3.30",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
+    "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.30.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "@babel/runtime": "^7.24.4",
+    "@babel/core": "7.24.4",
+    "@babel/preset-env": "7.24.4",
+    "@babel/runtime": "7.24.4",
     "@falu/react-native-identity": "workspace:*",
-    "@react-native-community/cli-platform-android": "^13.6.4",
-    "@react-native-community/cli-platform-ios": "^13.6.5",
+    "@react-native-community/cli-platform-android": "13.6.4",
+    "@react-native-community/cli-platform-ios": "13.6.5",
     "@react-native/babel-preset": "0.75.0-main",
     "@react-native/gradle-plugin": "0.75.0-main",
     "@react-native/metro-config": "0.75.0-main",
     "@react-native/typescript-config": "0.75.0-main",
-    "babel-plugin-module-resolver": "^5.0.1",
+    "babel-plugin-module-resolver": "5.0.1",
     "metro-react-native-babel-preset": "0.77.0",
     "react": "18.2.0",
     "react-native": "0.73.6"
