Group updates for com.facebook.flipper

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -61,6 +61,9 @@ updates:
       androidx:
         patterns:
           - 'androidx.*'
+      facebook:
+        patterns:
+          - 'com.facebook.flipper:*'
       google:
         patterns:
           - 'com.google.android.gms:*'
