--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@changesets/cli": "2.27.1",
     "@react-native-community/eslint-config": "3.2.0",
     "@react-native/eslint-config": "0.74.80",
+    "@types/react": "18.2.44",
     "@vitejs/plugin-react": "4.2.1",
     "eslint": "8.51.0",
     "eslint-config-turbo": "1.13.2",
@@ -36,9 +37,6 @@
     "typescript": "5.4.5",
     "vitest": "1.4.0",
     "vitest-react-native": "0.1.5"
-  },
-  "resolutions": {
-    "@types/react": "^18.2.44"
   },
   "packageManager": "pnpm@8.9.0"
 }
