--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "vitest": "1.5.0",
     "vitest-react-native": "0.1.5"
   },
-  "packageManager": "pnpm@8.9.0"
+  "packageManager": "pnpm@8.9.0",
+  "engines": {
+    "node": ">=18"
+  }
 }
