Exclude react-native-builder-bob from react-native group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,6 +27,8 @@ updates:
           - 'react-native*'
           - '@react-native-community/*'
           - '@react-navigation/*'
+        exclude-patterns:
+          - 'react-native-builder-bob'
       react-navigation:
         patterns:
           - '@react-navigation/*'
