--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -25,14 +25,17 @@
     "ios",
     "android"
   ],
-  "repository": "https://github.com/faluapp/falu-react-native",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/faluapp/falu-react-native"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/faluapp/falu-react-native/issues"
   },
   "homepage": "https://github.com/faluapp/falu-react-native/blob/main/packages/identity/README.md",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   },
   "peerDependencies": {
     "react": "*",
@@ -51,5 +54,8 @@
         }
       ]
     ]
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
