--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,10 @@ android.iml
 
 # Cocoapods
 #
-example/ios/Pods
+examples/**/ios/Pods
 
 # Ruby
-example/vendor/
+examples/**/vendor/
 
 # node.js
 #
