--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "clean": "turbo run clean && rimraf .turbo frameworks/android/build"
+    "clean": "turbo run clean && rimraf .turbo frameworks/android/build frameworks/ios/build"
   },
   "devDependencies": {
     "@changesets/cli": "2.27.1",
