--- a/turbo.json
+++ b/turbo.json
@@ -9,11 +9,11 @@
         "!android/build",
         "src/*.ts",
         "src/*.tsx",
-        "example/package.json",
-        "example/android",
-        "!example/android/.gradle",
-        "!example/android/build",
-        "!example/android/app/build"
+        "examples/**/package.json",
+        "examples/**/android",
+        "!examples/**/android/.gradle",
+        "!examples/**/android/build",
+        "!examples/**/android/app/build"
       ],
       "outputs": []
     },
@@ -24,10 +24,10 @@
         "ios",
         "src/*.ts",
         "src/*.tsx",
-        "example/package.json",
-        "example/ios",
-        "!example/ios/build",
-        "!example/ios/Pods"
+        "examples/**/package.json",
+        "examples/**/ios",
+        "!examples/**/ios/build",
+        "!examples/**/ios/Pods"
       ],
       "outputs": []
     },
