--- a/examples/identity/tsconfig.json
+++ b/examples/identity/tsconfig.json
@@ -1,4 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@falu/react-native-identity": ["../../packages/identity/src/index"]
+    }
+  }
 }
