--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup turborepo caching
+      - name: ⎔ Setup turborepo caching
         uses: dtinth/setup-github-actions-caching-for-turbo@v1
 
       - name: ⎔ Setup pnpm
@@ -57,13 +57,13 @@ jobs:
       - name: 🧪 Test
         run: pnpm test
 
-      - name: Setup JDK
+      - name: ⎔ Setup JDK
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Cache Gradle
+      - name: 🗄️ Cache Gradle
         uses: actions/cache@v4
         with:
           path: |
@@ -74,7 +74,7 @@ jobs:
             ${{ runner.os }}-gradle-
           save-always: true
 
-      - name: Build examples for Android
+      - name: 🛠️ Build examples for Android
         run: pnpm build:android
         env:
           JAVA_OPTS: '-XX:MaxHeapSize=6g'
