Move android and iOS frameworks back to individual packages

--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -10,7 +10,21 @@
   "source": "src/index",
   "files": [
     "src",
-    "lib"
+    "lib",
+    "android",
+    "ios",
+    "cpp",
+    "*.podspec",
+    "!ios/build",
+    "!android/build",
+    "!android/gradle",
+    "!android/gradlew",
+    "!android/gradlew.bat",
+    "!android/local.properties",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__",
+    "!**/.*"
   ],
   "scripts": {
     "prepare": "bob build",
