--- a/examples/identity/android/app/build.gradle
+++ b/examples/identity/android/app/build.gradle
@@ -71,9 +71,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.faluidentityreactnativeexample"
+    namespace "io.faluidentityreactnativeexample"
     defaultConfig {
-        applicationId "com.faluidentityreactnativeexample"
+        applicationId "io.faluidentityreactnativeexample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
