--- a/packages/identity/android/build.gradle
+++ b/packages/identity/android/build.gradle
@@ -44,7 +44,7 @@ def supportsNamespace() {
 
 android {
   if (supportsNamespace()) {
-    namespace "com.faluidentityreactnative"
+    namespace "io.faluidentityreactnative"
 
     sourceSets {
       main {
