--- a/packages/identity/android/src/main/AndroidManifest.xml
+++ b/packages/identity/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.faluidentityreactnative">
+          package="io.faluidentityreactnative">
 </manifest>
