--- a/examples/identity/package.json
+++ b/examples/identity/package.json
@@ -25,10 +25,10 @@
     "@falu/react-native-identity": "workspace:*",
     "@react-native-community/cli-platform-android": "13.6.5",
     "@react-native-community/cli-platform-ios": "13.6.5",
-    "@react-native/babel-preset": "0.75.0-main",
-    "@react-native/gradle-plugin": "0.75.0-main",
-    "@react-native/metro-config": "0.75.0-main",
-    "@react-native/typescript-config": "0.75.0-main",
+    "@react-native/babel-preset": "0.74.81",
+    "@react-native/gradle-plugin": "0.74.81",
+    "@react-native/metro-config": "0.74.81",
+    "@react-native/typescript-config": "0.74.81",
     "babel-plugin-module-resolver": "5.0.2",
     "metro-react-native-babel-preset": "0.77.0",
     "react": "18.2.0",
