--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@changesets/cli": "2.27.1",
     "@react-native-community/eslint-config": "3.2.0",
-    "@react-native/eslint-config": "0.75.0-main",
+    "@react-native/eslint-config": "0.74.81",
     "@types/react": "18.2.79",
     "@vitejs/plugin-react": "4.2.1",
     "eslint-config-turbo": "1.13.2",
