--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.eslintrc.yml", "**/tsconfig*.json"],
-  "pipeline": {
+  "tasks": {
     "build:android": {
       "inputs": [
         "package.json",
