--- a/package.json
+++ b/package.json
@@ -25,18 +25,14 @@
     "@react-native-community/eslint-config": "3.2.0",
     "@react-native/eslint-config": "0.74.83",
     "@types/react": "18.3.3",
-    "@vitejs/plugin-react": "4.3.0",
     "eslint-config-turbo": "1.13.3",
     "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-vitest": "0.5.4",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
     "react-native-builder-bob": "0.20.0",
     "rimraf": "5.0.7",
     "turbo": "1.13.3",
-    "typescript": "5.4.5",
-    "vitest": "1.6.0",
-    "vitest-react-native": "0.1.5"
+    "typescript": "5.4.5"
   },
   "engines": {
     "node": ">=18"
