--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@react-native-community/eslint-config": "3.2.0",
     "@react-native/eslint-config": "0.74.83",
     "@types/react": "18.3.3",
+    "@types/jest": "^29.5.5",
     "eslint-config-turbo": "1.13.3",
     "eslint-plugin-prettier": "5.1.3",
+    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
     "react-native-builder-bob": "0.20.0",
