--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.27.5",
+    "@jest/globals": "^29.7.0",
     "@react-native-community/eslint-config": "3.2.0",
     "@react-native/eslint-config": "0.74.83",
-    "@types/react": "18.3.3",
     "@types/jest": "^29.5.5",
+    "@types/react": "18.3.3",
     "eslint-config-turbo": "1.13.3",
     "eslint-plugin-prettier": "5.1.3",
     "jest": "^29.7.0",
@@ -33,6 +34,7 @@
     "prettier-plugin-organize-imports": "3.2.4",
     "react-native-builder-bob": "0.20.0",
     "rimraf": "5.0.7",
+    "ts-jest": "^29.1.4",
     "turbo": "1.13.3",
     "typescript": "5.4.5"
   },
