--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -30,7 +30,7 @@
     "prepare": "bob build",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "test": "vitest",
+    "test": "jest",
     "clean": "rimraf .turbo lib"
   },
   "keywords": [
@@ -53,6 +53,13 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/examples/identity/node_modules",
+      "<rootDir>/packages/identity/lib/"
+    ]
   },
   "react-native-builder-bob": {
     "source": "src",
