Move babel config to identity package and update jest configuration

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,9 @@ jobs:
       - name: 🔬 Lint
         run: pnpm lint
 
+      - name: 🧪 Test
+        run: pnpm test
+      
       - name: ⎔ Setup JDK
         uses: actions/setup-java@v4
         with:
