Replace vitest with jest (#80)
* Replace vitest with jest

* Disable test task

* Move babel config to identity package and update jest configuration

* Fix code formatting issue

* Fix missing new lines

---------

Co-authored-by: Seth Onyango <57979366+SecyWecy@users.noreply.github.com>

--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -30,7 +30,7 @@
     "prepare": "bob build",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "test": "vitest",
+    "test": "jest",
     "clean": "rimraf .turbo lib"
   },
   "keywords": [
@@ -53,6 +53,16 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/examples/identity/node_modules",
+      "<rootDir>/packages/identity/lib"
+    ],
+    "testPathIgnorePatterns": [
+      "\\.d\\.ts$"
+    ]
   },
   "react-native-builder-bob": {
     "source": "src",
